mainly fixing format and organization

--- a/from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
+++ b/from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
@@ -1,4 +1,4 @@
-# Inference and rough equivalence testing with binomial outcomes
+# Inference/equivalence testing w. binomial outcomes
 
 ```{r}
 #| include: false
